<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ConfirmLoginActivity" >


    <!-- Login form -->

    <ScrollView
        android:id="@+id/activity_confirm_login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/headerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wellcome" />

            <EditText
                android:id="@+id/activity_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/activity_confirm_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/confirm_button" />

        </LinearLayout>
    </ScrollView>

</merge>