<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PasswordEncryptActivity" >

    <TextView
        android:id="@+id/password_encrypt_page_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/password_activity_info" />

    <EditText
        android:id="@+id/password_encrypt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_encrypt_page_title"
        android:hint="@string/encrypt_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/password_encrypt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_encrypt_password"
        android:hint="@string/confirm_encrypt_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/activity_vertical_margin" />

</RelativeLayout>
