<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SetupActivity$QuestionsSectionFragment" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/page_question_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="@string/page_setup_question_title" />

        <TextView
            android:id="@+id/page_question_question_1_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/page_question_title"
            android:text="@string/question_1_label" />

        <Spinner
            android:id="@+id/page_question_question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/page_question_question_1_label" >
        </Spinner>

        <EditText
            android:id="@+id/page_question_answer_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/page_question_question_1"
            android:hint="@string/answer_field"
            android:paddingBottom="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/page_question_question_2_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/page_question_answer_1"
            android:text="@string/question_2_label" />

        <Spinner
            android:id="@+id/page_question_question_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/page_question_question_2_label" >
        </Spinner>

        <EditText
            android:id="@+id/page_question_answer_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/page_question_question_2"
            android:hint="@string/answer_field"
            android:paddingBottom="@dimen/activity_vertical_margin" />

        <TextView
            android:id="@+id/page_question_question_3_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/page_question_answer_2"
            android:text="@string/question_3_label" />

        <Spinner
            android:id="@+id/page_question_question_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/page_question_question_3_label" >
        </Spinner>

        <EditText
            android:id="@+id/page_question_answer_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/page_question_question_3"
            android:hint="@string/answer_field" />
    </RelativeLayout>

</ScrollView>