<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright 2010, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->


<!-- Layout for WordActivity. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="10dip"
    android:paddingRight="10dip" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:layout_marginEnd="15dip"
        android:layout_marginStart="15dip"
        android:layout_marginTop="6dip" >

        <TextView
            android:id="@+id/display_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:text="@string/edit_name_hint"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/display_title"
            android:layout_below="@id/display_title"
            android:maxLines="4"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:layout_marginEnd="15dip"
        android:layout_marginStart="15dip"
        android:layout_marginTop="6dip" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/display_usenameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:layout_marginTop="6dip"
            android:layout_marginBottom="6dip"
            android:text="@string/edit_username_hint"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/display_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/display_usenameLabel"
            android:layout_below="@id/display_usenameLabel"
            android:maxLines="4"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:layout_marginEnd="15dip"
        android:layout_marginStart="15dip"
        android:layout_marginTop="6dip" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
             />

        <TextView
            android:id="@+id/display_passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:layout_marginTop="6dip"
            android:layout_marginBottom="6dip"
            android:text="@string/edit_password_hint"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/display_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/display_passwordLabel"
            android:layout_below="@id/display_passwordLabel"
            android:background="@drawable/back"
            android:gravity="center"
            android:maxLines="4"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="?android:textColorPrimary" />

        <Button
            android:id="@+id/display_copyButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/display_password"
            android:layout_below="@id/display_password"
            android:text="@string/action_copy_password" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dip"
        android:layout_marginEnd="15dip"
        android:layout_marginStart="15dip"
        android:layout_marginTop="6dip" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
             />

        <TextView
            android:id="@+id/display_noteLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:singleLine="true"
            android:layout_marginTop="6dip"
            android:layout_marginBottom="6dip"
            android:text="@string/edit_note_hint"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/display_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/display_noteLabel"
            android:layout_below="@id/display_noteLabel"
            android:maxLines="4"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorSecondary" />
    </RelativeLayout>

</LinearLayout>